Fixed layout issues, started working on MobileNav

--- a/sunnyside-agency-landing-page-main/styles.css
+++ b/sunnyside-agency-landing-page-main/styles.css
@@ -35,10 +35,11 @@
 *::after {
   margin: 0;
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
-  margin: 0 auto;
+  margin: 0;
   font-size: 1.125rem;
 }
 
@@ -49,16 +50,30 @@ h1 {
   text-transform: uppercase;
   letter-spacing: 7px;
   text-align: center;
+  font-size: 3rem;
+  margin-top: 5rem;
 }
 
 h2 {
   color: var(--Very-dark-desaturated-blue);
   font-family: var(--header-font-family);
-  font-weight: 900;
+  font-weight: 700;
   text-align: center;
   margin-bottom: 1.5rem;
+  font-size: 2.5rem;
+}
+.textBox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  padding: 3.5rem 0 3.5rem 0;
 }
 
+.textBox p {
+  width: 75%;
+}
 .textBox a {
   color: var(--Very-dark-desaturated-blue);
   font-family: var(--header-font-family);
@@ -83,7 +98,7 @@ h2 {
 }
 
 .textBox > a:hover::before {
-  opacity: 0.8;
+  opacity: 1;
 }
 
 .textBox > .pinkLink::after {
@@ -102,10 +117,13 @@ header {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  padding: 1rem 1.5rem 20rem;
+  padding: 1rem 1.5rem 30rem 0;
   width: 100%;
 }
 
+.logo-wrapper {
+  margin-left: 2rem;
+}
 .navigationContainer {
   display: flex;
   justify-content: space-between;
@@ -118,7 +136,7 @@ header {
   text-transform: uppercase;
   padding: 10px;
   text-align: center;
-  border-radius: 30px;
+  border-radius: 1.5rem;
   background-color: hsl(0, 0%, 100%);
 }
 
@@ -128,8 +146,16 @@ a {
 
 nav li a {
   color: var(--White);
-  font-size: 0.7rem;
+  font-size: 1.2rem;
+  font-family: var(--paragraph-font-family);
+  font-weight: 900;
+  margin-right: 1.5rem;
 }
+
+.navbar-right {
+  display: none;
+}
+
 li {
   list-style: none;
   display: inline-block;
@@ -140,17 +166,10 @@ li {
   display: flex;
   align-items: center;
   flex-direction: column;
-  line-height: 5vh;
+  line-height: 15vh;
   text-align: center;
 }
 
-.textBox {
-  display: flex;
-  flex-direction: column;
-  padding: 5rem;
-  align-items: center;
-  width: 100%;
-}
 .eggContainer,
 .pinkContainer {
   background-repeat: no-repeat;
@@ -165,15 +184,12 @@ li {
 .eggContainer {
   background-image: url("./images/mobile/image-transform.jpg");
 }
-.textboxGreen {
+.cherryBg {
   background-image: url(images/mobile/image-graphic-design.jpg);
   background-repeat: no-repeat;
-  padding: 5rem;
   background-size: cover;
   background-position: center;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  height: 650px;
 }
 
 .textboxGreen h2,
@@ -182,18 +198,22 @@ li {
 }
 
 .textWrapper {
-  margin: 15rem 0 1rem;
-}
-
-.textboxBlue {
-  background-image: url(images/mobile/image-photography.jpg);
-  background-repeat: no-repeat;
-  padding: 5rem;
-  background-size: cover;
-  background-position: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-end;
+  padding: 5rem 0 5rem 0;
+}
+.textWrapper p {
+  width: 50%;
+}
+
+.orangeBg {
+  background-image: url(images/mobile/image-photography.jpg);
+  background-repeat: no-repeat;
+  height: 650px;
+  background-size: cover;
+  background-position: center;
 }
 .textboxBlue p,
 .textboxBlue h2 {
@@ -211,7 +231,7 @@ li {
 h3 {
   color: var(--Grayish-blue);
   text-transform: uppercase;
-  margin-top: 2rem;
+  margin-top: 5rem;
   letter-spacing: 4px;
   text-align: center;
   font-family: var(--header-font-family);
@@ -222,17 +242,19 @@ h3 {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 2rem;
+  margin: 4rem 0 4rem 0;
 }
+
 .clientBoxes p {
-  color: var(--Dark-blue);
+  color: var(--Dark-grayish-blue);
   margin-bottom: 15px;
+  width: 110%;
 }
 .clientImg {
   display: block;
   margin: 50px;
   border-radius: 50%;
-  max-width: 100;
+  max-width: 100px;
 }
 
 .clientBoxes p:nth-last-of-type(1) {
@@ -248,7 +270,6 @@ h3 {
 .pictureWrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  width: 100vw;
   gap: 0;
   margin: 0;
 }
@@ -284,9 +305,7 @@ footer {
 }
 .iconsContainer ul {
   display: flex;
-  gap: 3rem;
-  margin-right: 1.5rem;
-  margin-bottom: 1rem;
+  gap: 2rem;
 }
 
 footer a {
@@ -295,34 +314,56 @@ footer a {
 }
 
 /* Media queries to change images to deskptop versions */
-@media (min-width: 1000px) {
+@media (min-width: 700px) {
   header {
-    background-image: url(./images/desktop/image-header.jpg);
+    background-image: url("images/desktop/image-header.jpg");
+    height: 1000px;
   }
-  .textboxGreen {
-    background-image: url(images/desktop/image-graphic-design.jpg);
+  .cherryBg {
+    background-image: url("images/desktop/image-graphic-design.jpg");
+    background-size: 100% 100%;
   }
-  .textboxBlue {
-    background-image: url(images/desktop/image-photography.jpg);
+  .orangeBg {
+    background-image: url("images/desktop/image-photography.jpg");
+    background-size: 100% 100%;
   }
 }
 
 /* Layout Queries */
 
-@media (min-width: 1000px) {
+@media (min-width: 700px) {
   .pictureWrapper {
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
   .testimonialsBox {
     flex-direction: row;
+    padding: 10rem;
+    gap: 4rem;
   }
 
   .container {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-auto-flow: dense;
+    justify-content: end;
   }
+
   .brandBox {
     grid-row: 1;
+  }
+
+  .feedbackBox {
+    position: relative;
+  }
+  h3 {
+    position: absolute;
+    top: 10%;
+    left: 0;
+    width: 100%;
+  }
+  .navbar-right {
+    display: block;
+  }
+  .mobileNav {
+    display: None;
   }
 }
